--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/noto-sans-thai": "^5.2.8",
+    "@fontsource/athiti": "^5.2.8",
     "@neondatabase/serverless": "^1.0.2",
     "@stackframe/react": "^2.8.44",
     "@stackframe/stack": "^2.8.44",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5"
   }
 }
