--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/noto-sans-thai": "^5.2.8",
     "@fontsource/athiti": "^5.2.8",
+    "@fontsource/mukta": "^5.2.8",
     "@neondatabase/serverless": "^1.0.2",
     "@stackframe/react": "^2.8.44",
     "@stackframe/stack": "^2.8.44",
+    "lucide": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
