--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@neondatabase/serverless": "^1.0.2",
     "@stackframe/react": "^2.8.44",
     "@stackframe/stack": "^2.8.44",
+    "axios": "^1.13.1",
     "lucide": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sonner": "^2.0.7",
     "zod": "^4.1.12"
   },
   "devDependencies": {
