--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-medium-image-zoom": "^5.4.0",
     "sonner": "^2.0.7",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
